--- a/css/main.css
+++ b/css/main.css
@@ -130,3 +130,43 @@ body{
 	border-top: 0px solid transparent;
 	border-bottom: 65px solid #fff;
 }
+
+.wrap {
+	background-color: #fff;
+	width: 100%;
+}
+
+.content{
+	margin: 0 auto;
+	width: 80%;
+	font-size: 0;
+}
+.content>div {
+	background-color: #fff;
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+	width: 50%;
+}
+
+.title, .rewback {
+	padding: 0;
+	margin: 0;
+	text-transform: uppercase;
+}
+
+.title h2 {
+	font-size: 40px;
+	font-weight: bold;
+}
+
+.rewback {
+	text-align: right;
+}
+
+.rewback span {
+	border: 1px solid lightgray;
+	font-size: 18px;
+	font-weight: bold;
+	padding: 12px 35px;
+}
