--- a/css/main.css
+++ b/css/main.css
@@ -188,26 +188,56 @@ body{
 }
 /* input fields */
 
-.forma {
-	
+.fields {
+	font-size: 0;
+	margin-top: 70px;
 }
 
-.forma>div {
+.fields>div {
 	display: inline-block;
 }
 
-#name, #family, #secondname {
-	width: 295px;
-	font-size: 24px;
+/* #name, #family, #secondname {
 	padding: 18px 0;
+} */
+
+.list-fields-item:nth-child(-n+3) {
+	width: 294px;
 }
 
-#family {
-	margin: 0 37px;
+.list-fields-item:nth-child(2) {
+	margin: 0 39px;
 }
+.list-fields-item:nth-child(4) {
+	margin: 37px 36px 37px 0;
+}
+
+
 
 #phonenumber, #e-mail {
-	font-size: 24px;
 	width: 462px;
 	padding: 18px 0;
+}	
+
+input {
+	border: 1px solid #e5ddd5;
+	box-sizing: border-box;
+	font-family: 'PTSans', sans-serif;
+	font-size: 24px;
+	line-height: 24px;
+	padding: 20px 0;
+	text-indent: 24px;
+}
+
+.list-fields-item:nth-child(6)>textarea {
+	width: 960px;
+	height: 210px;
+	color: #000;
+}
+
+textarea::-webkit-input-placeholder {
+	color: #000;
+	font-size: 24px;
+	padding-top: 24px;
+	text-indent: 24px;
 }
