--- a/barber-shop/css/form.css
+++ b/barber-shop/css/form.css
@@ -311,9 +311,35 @@ textarea:focus::-ms-input-placeholder {
 	border-top: 1px solid #e5ddd5;
 	font-size: 1rem;
 	margin: 86px auto 0;
-	padding-top: 65px;
+	/* padding-top: 65px; */
+	/* position: relative; */
 	width: 100%;
 }
+
+.list-select>div {
+	display: inline-block;
+}
+
+.purpose-header {
+	background-color: #f8f5f2;
+	padding: 0 40px;
+	width: 400px;
+	margin: 0 auto;
+	transform: translateY(-20px);
+	/* position: absolute;
+	padding: 0 40px;
+	width: 400px;
+	left: 30%;
+	top: -20px; */
+}
+
+.purpose-header>h2 {
+	font-size: 30px;
+	font-weight: normal;
+	margin: 0;
+	text-transform: uppercase;
+}
+
 form {
 
 }
@@ -321,9 +347,9 @@ form {
 	width: 50px;
 	height: 50px;
 	cursor: pointer;
-	margin: 0 150px 0 0;
+	/* margin: 0 150px 0 0; */
 }
-#admiral {
+/* #admiral {
 	margin-left: 55px;
 }
 
@@ -347,4 +373,4 @@ form {
 
 .choose:not(:last-child) {
 	margin-right: 130px;
-}
+} */
