--- a/barber-shop/css/main.css
+++ b/barber-shop/css/main.css
@@ -243,6 +243,7 @@ background-color: #fff;
 	padding: 0;
 	margin: 0;
 	list-style: none;
+	font-size: 0;
 }
 
 .list-col-item {
@@ -250,5 +251,26 @@ background-color: #fff;
 	color: #fff;
 	text-align: center;
 	max-width: 33.3%;
+	font-size: 16px;
 
+}
+
+.list-col-item {
+	/* float: left; */
+	padding: 75px 40px 0;
+}
+
+.list-col-item:nth-child(2) {
+	padding: 75px 65px 0;
+}
+
+.col-tex {
+	font-size: 20px;
+	font-family: "PTSansNarrowRegular";
+	letter-spacing: .8px;
+}
+
+.col-head {
+	font-size: 30px;
+	font-family: "PTSansNarrowBold";
 }
