--- a/barber-shop/css/main.css
+++ b/barber-shop/css/main.css
@@ -208,7 +208,7 @@ background-color: #fff;
 	width: 50%;
 	min-height: 160px;
 	font-size: 16px;
-	padding: 25px 35px;
+	padding: 25px 35px
 	/* line-height: 18px; */
 }
 
