--- a/barber-shop/css/main.css
+++ b/barber-shop/css/main.css
@@ -195,6 +195,22 @@ max-width: 33.3%;
 background-color: #fff;
 }
 
+.colum-2 {
+	
+}
+
+.trngl-lft {
+	width: 0;
+	height: 0;
+	border-top: 25px solid #fff;
+	border-left: 25px solid transparent;
+	border-right: 0px solid transparent;
+	border-bottom: 0px solid transparent;
+	position: absolute;
+	top: 45px;
+	left: -25px;
+}
+
 .col-wrap>.colum-4 {
 	max-width: 66.7%;
 	color: #fff;
