--- a/barber-shop/css/main.css
+++ b/barber-shop/css/main.css
@@ -58,14 +58,14 @@ html, body {
 
 a.nav-link {
 	display: block;
-	padding: 26px 0 23px 0;
+	padding: 26px 0 26px 0;
 	position: relative;
 	text-decoration: none;
-	border-bottom: 3px solid transparent;
+	/* border-bottom: 3px solid transparent; */
 	color: #fff;
 }
 
-a.nav-link::after {
+a.nav-link:after {
 	content: '';
 	position: absolute;
 	width: 100%;
@@ -80,12 +80,12 @@ a.nav-link::after {
 	transform: scale(0, 1);
 }
 
-a.nav-link:hover::after {
+a.nav-link:hover:after {
 	-webkit-transform: scale(1, 1);
 	-ms-transform: scale(1, 1);
 	-o-transform: scale(1, 1);
 	transform: scale(1, 1);
-	transition: transform .5s;
+	transition: transform .5s ease-in-out  ;
 }
 
 a.nav-link:hover {
