--- a/DZ/bicycle/css/main.css
+++ b/DZ/bicycle/css/main.css
@@ -32,7 +32,6 @@ body {
 	font-size: 45px;
 	color: #fff;
 	text-decoration: none;
-	/* height: 2.22%; */
 	width: 140px;
 }
 
@@ -40,11 +39,16 @@ body {
 	text-align: right;
 }
 
+.head__wrap {
+	text-align: right;
+}
+
 .head__form {
+	display: inline-block;
   position: relative;
   width: 300px;
-  margin: 0 auto ;
   height: 42px;
+
 }
 
 .search {
@@ -64,6 +68,8 @@ body {
 .search:focus {
   width: 300px;
   z-index: 99;
+  font-size: 24px;
+  color: grey;
   background-color: rgba(255, 255, 255, .5);
 }
 
@@ -83,7 +89,7 @@ button:before {
   content: "\f002";
   font-family: FontAwesome;
   font-size: 40px;
-  color: #F9F0DA;
+  color: #fff;
 }
 
 
@@ -284,11 +290,12 @@ h2>span {
 .list__right {
 	list-style: none;
 	margin: 0;
-	padding: 0;
+	/* padding: 0; */
+	text-align: center;
 }
 
 label[for='.subscribe'] {
-	font-size: 14px;
+	font-size: 25px;
 	color: #fff;
 	text-transform: uppercase;
 	font-family: 'open_sans_condensedlight', sans-serif;
@@ -297,16 +304,48 @@ label[for='.subscribe'] {
 .subscribe {
 	width: 100%;
 	height: 70px;
+	margin-top: 25px;
+	margin-bottom: 15px;
 	background-color: rgba(128, 128, 128, .7);
 	border: none;
+	font-size: 24px;
+	color: #fff;
 	border-radius: 5px 5px;
+}
+.subscribe:focus {
+	outline: none;
 }
 
 .subscribe::-webkit-input-placeholder {color: gray;
-font-size:20px;}
+font-size:18px;}
 .subscribe::-moz-placeholder          {color: gray;
-	font-size:20px;}/* Firefox 19+ */
+	font-size:18px;}/* Firefox 19+ */
 .subscribe:-moz-placeholder           {color: gray;
-	font-size:20px;}/* Firefox 18- */
+	font-size:18px;}/* Firefox 18- */
 .subscribe:-ms-input-placeholder      {color: gray;
-font-size:20px;}
+font-size:18px;}
+
+.social {
+	display: inline-block;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+	background-size: cover;
+	font-size: 0;
+	width: 52px;
+	height: 52px;
+}
+
+.right__item-tw {
+	background-image: url('../images/résaux sociaux.png');
+	background-position: 0 0;
+}
+.right__item-gplus {
+	background-image: url('../images/résaux sociaux.png');
+	background-position: -128px 0;
+	width: 55px;
+	margin: 0 25px;
+}
+.right__item-fb {
+	background-image: url('../images/résaux sociaux.png');
+	background-position: -240px 0;
+}
