--- a/weather-forecast/css/style.css
+++ b/weather-forecast/css/style.css
@@ -24,12 +24,13 @@ body {
 .container {
 	position: absolute;
 	width: 80%;
-	height: 566px;
+	/*height: 566px;*/
 	margin:  auto;
-	top: 0;
-	left: 0;
+	top: 50%;
+	/*left: 0;
 	bottom: 0;
-	right: 0;
+	right: 0;*/
+	transform: translateY(-50%);
 }
 
 .header {
