--- a/weather-forecast/css/style.css
+++ b/weather-forecast/css/style.css
@@ -30,7 +30,8 @@ body {
 	left: 50%;
 	/*bottom: 0;
 	right: 0;*/
-	transform: translate(-50% -50%);
+	transform: translateX(-50%);
+	transform: translateY(-50%);
 }
 
 .header {
