--- a/weather-forecast/css/style.css
+++ b/weather-forecast/css/style.css
@@ -25,7 +25,7 @@ body {
 	position: absolute;
 	width: 80%;
 	/*height: 566px;*/
-	margin:  auto;
+	/*margin:  auto;*/
 	top: 50%;
 	left: 50%;
 	/*bottom: 0;
